frontend/assets/app.css
html, body {
  background-color: var(--base-background-color);
  font-family: var( --base-font-family);
  color: var(--base-color);
  position: relative;
  margin: 0;
  padding: 0;
}

body:before {
  content: '';
  background: var(--base-color-accent);
  top: 0;
  left: 0;
  right: 0;
  height: 6px;
  position: absolute;
}

a {
  color: var(--base-color-accent);
  text-decoration: none;
}

